fix showing footer on mobile

--- a/src/components/layout/layout.styles.scss
+++ b/src/components/layout/layout.styles.scss
@@ -625,7 +625,8 @@ pre tt:after {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100vh;
+  position: fixed;
+  height: 100%;
   
   .main-content {
     flex: 1;
